--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,7 +5,31 @@
          version="4.0">
 
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>/WEB-INF/pages/login.jsp</welcome-file>
     </welcome-file-list>
+    <servlet>
+        <servlet-name>login</servlet-name>
+        <servlet-class>activate.LoginActivate</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/login.jhtml</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>code</servlet-name>
+        <servlet-class>activate.CodeActivate</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>code</servlet-name>
+        <url-pattern>/code.jhtml</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>Message</servlet-name>
+        <servlet-class>activate.MessageActivate</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Message</servlet-name>
+        <url-pattern>/message.jhtml</url-pattern>
+    </servlet-mapping>
 </web-app>
 
