--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,17 @@
             <version>7.5</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.1.2</version>
+        </dependency>
     </dependencies>
 
     <groupId>org.example</groupId>
