--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -25,7 +25,7 @@
     </servlet-mapping>
     <servlet>
         <servlet-name>Message</servlet-name>
-        <servlet-class>activate.MessageActivate</servlet-class>
+        <servlet-class>activate.BaseChatActivate</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Message</servlet-name>
